--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@mui/material": "^5.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.16"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.16",
     "@types/react": "17.0.26",
+    "autoprefixer": "^9.8.8",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
     "typescript": "4.4.3"
   }
 }
