--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
