--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.16",
+    "@types/luxon": "^2.0.5",
     "@types/react": "17.0.26",
     "autoprefixer": "^9.8.8",
     "eslint": "7.32.0",
