--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^0.24.0",
     "luxon": "^2.0.2",
     "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.16",
     "@types/luxon": "^2.0.5",
     "@types/react": "17.0.26",
     "autoprefixer": "^9.8.8",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
     "typescript": "4.4.3"
   }
 }
